{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 163,
  "lineage": "43da534a-a448-8d29-550e-45b98efd51ed",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myapp-nic-1-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkInterfaces/myapp-nic-1-Vnet",
            "internal_domain_name_suffix": "d02wtsnifw0ubkryyynzd3s0sg.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/publicIPAddresses/myap-public-ip-1-Vnet",
                "subnet_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/subnets/internal"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-67-FA-85",
            "name": "myapp-nic-1-Vnet",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "myapp",
            "virtual_machine_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Compute/virtualMachines/myapp-server-Vnet1"
          },
          "dependencies": [
            "azurerm_public_ip.myapp-public-ip-1-Vnet",
            "azurerm_resource_group.myapp",
            "azurerm_subnet.myapp-subnet-1",
            "azurerm_virtual_network.myapp-1-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myapp-nic-2-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkInterfaces/myapp-nic-2-Vnet",
            "internal_domain_name_suffix": "pz0ebcd2eraulk2lrsyibb0ope.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/publicIPAddresses/myap-public-ip-2-Vnet",
                "subnet_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/subnets/internal"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-67-D9-C7",
            "name": "myapp-nic-2-Vnet",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myapp",
            "virtual_machine_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Compute/virtualMachines/myapp-server-Vnet2"
          },
          "dependencies": [
            "azurerm_public_ip.myapp-public-ip-2-Vnet",
            "azurerm_resource_group.myapp",
            "azurerm_subnet.myapp-subnet-2",
            "azurerm_virtual_network.myapp-2-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-1-Vnet",
            "location": "japaneast",
            "name": "myapp-sg-1-Vnet",
            "resource_group_name": "myapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myapp-sg-2-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-2-Vnet",
            "location": "japaneast",
            "name": "myapp-sg-2-Vnet",
            "resource_group_name": "myapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myapp-public-ip-1-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/publicIPAddresses/myap-public-ip-1-Vnet",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.115.199.33",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "myap-public-ip-1-Vnet",
            "resource_group_name": "myapp",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myapp-public-ip-2-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/publicIPAddresses/myap-public-ip-2-Vnet",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.222.144.20",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "myap-public-ip-2-Vnet",
            "resource_group_name": "myapp",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "myapp",
            "virtual_network_name": "myapp-1-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myapp",
            "azurerm_virtual_network.myapp-1-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myapp-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "myapp",
            "virtual_network_name": "myapp-2-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myapp",
            "azurerm_virtual_network.myapp-2-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate-nsg-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-1-Vnet",
            "subnet_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.myapp-sg",
            "azurerm_resource_group.myapp",
            "azurerm_subnet.myapp-subnet-1",
            "azurerm_virtual_network.myapp-1-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate-nsg-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-2-Vnet",
            "subnet_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.myapp-sg-2-Vnet",
            "azurerm_resource_group.myapp",
            "azurerm_subnet.myapp-subnet-2",
            "azurerm_virtual_network.myapp-2-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myapp-1-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c969b91e-2da8-40b5-aa38-c61b91f65a96",
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet",
            "location": "japaneast",
            "name": "myapp-1-Vnet",
            "resource_group_name": "myapp",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-1-Vnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myapp-2-Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8840747e-247c-4541-ab8b-8cb080874e7c",
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet",
            "location": "japaneast",
            "name": "myapp-2-Vnet",
            "resource_group_name": "myapp",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-sg-2-Vnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.myapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer-myapp-1to2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet/virtualNetworkPeerings/peer-myapp-1to2",
            "name": "peer-myapp-1to2",
            "remote_virtual_network_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet",
            "resource_group_name": "myapp",
            "use_remote_gateways": false,
            "virtual_network_name": "myapp-1-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myapp",
            "azurerm_virtual_network.myapp-1-Vnet",
            "azurerm_virtual_network.myapp-2-Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer-myapp-2to1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-2-Vnet/virtualNetworkPeerings/peer-myapp-2to1",
            "name": "peer-myapp-2to1",
            "remote_virtual_network_id": "/subscriptions/633eddfa-f7c2-44b8-b14e-49011d7261b7/resourceGroups/myapp/providers/Microsoft.Network/virtualNetworks/myapp-1-Vnet",
            "resource_group_name": "myapp",
            "use_remote_gateways": false,
            "virtual_network_name": "myapp-2-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myapp",
            "azurerm_virtual_network.myapp-1-Vnet",
            "azurerm_virtual_network.myapp-2-Vnet"
          ]
        }
      ]
    }
  ]
}